installer/k8s-artefacts/global-apim/global-apim-volatile.yaml
# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#Create APIM gateway deployment and the service
#https://github.com/wso2/kubernetes-apim/blob/master/pattern-1/apim/wso2apim-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: cellery-system
spec:
  selector:
    matchLabels:
      deployment: gateway
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: gateway
    spec:
      containers:
      - name: gateway
        image: wso2cellery/wso2am:v0.1.1
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - nc -z localhost 9443
          initialDelaySeconds: 150
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/bash
              - -c
              - nc -z localhost 9443
          initialDelaySeconds: 150
          periodSeconds: 10
        imagePullPolicy: Always
        securityContext:
          runAsUser: 802
        ports:
        -
          containerPort: 8280
          protocol: "TCP"
        -
          containerPort: 8243
          protocol: "TCP"
        -
          containerPort: 9763
          protocol: "TCP"
        -
          containerPort: 9443
          protocol: "TCP"
        -
          containerPort: 5672
          protocol: "TCP"
        -
          containerPort: 9711
          protocol: "TCP"
        -
          containerPort: 9611
          protocol: "TCP"
        -
          containerPort: 7711
          protocol: "TCP"
        -
          containerPort: 7611
          protocol: "TCP"
        volumeMounts:
#        - name: apim-storage-volume
#          mountPath: /home/wso2carbon/wso2am-2.6.0/repository/deployment/server
        - name: apim-conf
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf
        - name: apim-conf-datasources
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/datasources
        - name: conf-identity
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/identity
        - name: apim-template
          mountPath: /home/wso2carbon/wso2-config-volume/repository/resources/api_templates
        - name: apim-tomcat
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/tomcat
        - name: apim-security
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/security
#        - name: auth-ext
#          mountPath: /home/wso2carbon/wso2-artifact-volume/repository/components/lib
# These containers are run during pod initialization
#      initContainers:
#      - name: chmodfs
#        image: busybox
#        command: ["chown", "-R", "802:802", "/home/wso2carbon/wso2am-2.6.0/repository/deployment/server"]
#        volumeMounts:
#        - name: apim-storage-volume
#          mountPath: "/home/wso2carbon/wso2am-2.6.0/repository/deployment/server"
      serviceAccountName: "cellerysvc-account"
      imagePullSecrets:
      - name: wso2creds
      volumes:
#      - name: apim-storage-volume
#        persistentVolumeClaim:
#          claimName: apim-repository-deployment-server-pvc
      - name: apim-conf
        configMap:
          name: gw-conf
      - name: apim-conf-datasources
        configMap:
          name: gw-conf-datasources
      - name: conf-identity
        configMap:
          name: conf-identity
      - name: apim-template
        configMap:
          name: apim-template
      - name: apim-tomcat
        configMap:
          name: apim-tomcat
      - name: apim-security
        configMap:
          name: apim-security
#      - name: auth-ext
#        configMap:
#          name: auth-ext
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
  namespace: cellery-system
spec:
  # label keys and values that must match in order to receive traffic for this service
  selector:
    deployment: gateway
  ports:
    # ports that this service should serve on
    -
      name: pass-through-http
      protocol: TCP
      port: 8280
    -
      name: pass-through-https
      protocol: TCP
      port: 8243
    -
      name: servlet-http
      protocol: TCP
      port: 9763
    -
      name: servlet-https
      protocol: TCP
      port: 9443
---
# This is required when idp.cellery-system calls are made assuming there is an IDP running within the mesh
apiVersion: v1
kind: Service
metadata:
  name: idp
spec:
  selector:
    deployment: gateway
  ports:
  - name: servlet-http
    port: 9763
    targetPort: 9763
    protocol: TCP
  - name: servlet-https
    port: 443
    targetPort: 9443
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gw-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - wso2-apim-gateway
  rules:
  - host: wso2-apim-gateway
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 8280
---
# This is required when idp.cellery-system calls are made assuming there is an IDP running from outside the mesh.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2is-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - idp.cellery-system
  rules:
  - host: idp.cellery-system
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 9443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pub-store-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - wso2-apim
  rules:
  - host: wso2-apim
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 9443
